# scone

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: base_config.yaml  large_config.yaml
examples/: simple_example.py
scone/: __init__.py
scone/configs/: __init__.py  benchmark_config.json  hydra_config.py  hydra_config.yaml
scone/data/: __init__.py  dataset.py  preprocessing.py
scone/inference/: __init__.py  embedding_cache.py  engine.py
scone/models/: __init__.py  f_gram_model.py  language_model.py
scone/scripts/: __init__.py  benchmark.py  evaluate.py  generate.py  hydra_train.py  precompute_embeddings.py  train.py  train_configurations.py
scone/tests/: __init__.py
scone/tokenization/: __init__.py  f_gram_tokenizer.py  n_gram_extractor.py
scone/training/: __init__.py  optimizer.py  trainer.py
scone/utils/: __init__.py  config.py  logging.py
tests/: test_embedding_cache.py  test_f_gram_model.py  test_language_model.py
